--- a/yatetradki/uitools/harken/assets/index.html
+++ b/yatetradki/uitools/harken/assets/index.html
@@ -68,8 +68,8 @@
 <div id="container">
     <div id="player-container">
         <audio id="player" playsinline controls>
-            <source src="/media/20230911/by10m_03.mp3" type="audio/mp3" />
-            <track kind="captions" label="English captions" src="/media/20230911/by10m_03.vtt" srclang="en" default />
+            <!-- <source src="/media/20230911/by10m_03.mp3" type="audio/mp3" /> -->
+            <!-- <track kind="captions" label="English captions" src="/media/20230911/by10m_03.vtt" srclang="en" default /> -->
         </audio>
     </div>
     <div id="subtitles">
